Correct use of z-index in .kaufman and section blocks

--- a/blocks/kaufman/__triangle/kaufman__triangle.css
+++ b/blocks/kaufman/__triangle/kaufman__triangle.css
@@ -6,6 +6,6 @@
   bottom: 0;
   right: -210px;
   background-image: url('../../../images/triangle.svg');
-  z-index: 0;
+  z-index: -1;
   transform: rotate(15deg);
 }
