--- a/blocks/table/__cell/_theme/table__cell_theme_dark.css
+++ b/blocks/table/__cell/_theme/table__cell_theme_dark.css
@@ -3,5 +3,4 @@
   margin-top: 80px;
   margin-right: 0;
   color: #fff;
-  z-index: 1;
 }
